aligning headings correctly

--- a/wagtailio/static/sass/components/_heading.scss
+++ b/wagtailio/static/sass/components/_heading.scss
@@ -6,6 +6,6 @@
     }
 
     @include media-query(large) {
-        grid-column: 2 / span 5;
+        grid-column: 3 / span 4;
     }
 }
